--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -7,6 +7,26 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Blog</title>
+    <link rel="stylesheet" href="/css/edit.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&family=Righteous&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
+    <nav class="myNavbar">
+        <div class="navContainer">
+          <div class="navLeft">
+            <h1 class="navBrand"><a class="logoLink" href="/">TECH JOURNAL</a></h1>
+            <!-- <h1 class="navBrand"></h1> -->
+          </div>
+            <div class="navRight">
+                  <ul class="itemContainer">
+                    <!-- 6 -->
+                    <li class="navItem"><a class="link" href="/">HOME |</a></li>
+                    <li class="navItem"><a class="link" href="/about">ABOUT US |</a></li>
+                    <li class="navItem"><a class="link" href="/contact">CONTACT US</a></li>
+                  </ul>
+            </div>
+        </div>
+      </nav>
 </head>
 <body>
     <div class="container">
@@ -14,6 +34,9 @@
         <form action="/articles/<%=article.id%>?_method=PUT" method="POST">
             <%- include('_form_fields') %>
         </form>
+    </div>
+    <div class="Footer">
+        <p>Made with ❤️ by <a class="gitUserName" href="https://github.com/codenipun">codenipun</a></p>
     </div>
 </body>
 </html>
