Added Media queries for mobile device

--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -18,12 +18,12 @@
         <!-- <h1 class="navBrand"></h1> -->
       </div>
         <div class="navRight">
-              <ul class="itemContainer">
+              <div class="itemContainer">
                 <!-- 6 -->
                 <li class="navItem"><a class="link" href="/">HOME |</a></li>
                 <li class="navItem"><a class="link" href="/about">ABOUT US |</a></li>
                 <li class="navItem"><a class="link" href="/contact">CONTACT US</a></li>
-              </ul>
+              </div>
         </div>
     </div>
   </nav>
