--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -76,3 +76,25 @@
     height: 620px;
     margin-top: 20px;
 }
+
+@media (max-width : 450px) {
+    .navContainer{
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     max-width: 1024px;
+    } 
+
+    .nlHeading{
+     font-size: 20px;
+    }
+
+    .nlForm{
+     flex-direction: column;
+    }
+
+    .nlBtn{
+     margin-top: 10px;
+     /* width: 100%; */
+    }
+}
