--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,3 +159,25 @@
     text-decoration: none;
     color: black;   
 }
+
+@media (max-width : 450px) {
+       .navContainer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        max-width: 1024px;
+       } 
+
+       .nlHeading{
+        font-size: 20px;
+       }
+
+       .nlForm{
+        flex-direction: column;
+       }
+
+       .nlBtn{
+        margin-top: 10px;
+        /* width: 100%; */
+       }
+}
